# FLD-scratch

./: .gitignore  01_simple_webserver.py  Face Landmark Detection.ipynb  Inference_visualization.ipynb  README.md  _note.ipynb  aug_test.ipynb  find_index.ipynb  home_run.ipynb  home_run_w300.ipynb  homedo-k-face-all-add-metric.ipynb  homedo-k-face-all.ipynb  homedo-k-face-frontal.ipynb  homedo-k-face-lateral.ipynb  jupyter_run_kface.ipynb  jupyter_run_w300.ipynb  main.py  mtcnn.ipynb  note.md  note.txt  pseudo.ipynb  pyproject.toml  remake-k-face-frontal-home-do-2.ipynb  remake-k-face-frontal-home-do.ipynb  remake-k-face-frontal.ipynb  remake-k-face-lateral.ipynb  remake-k-face.ipynb  rembg.ipynb  requirements.txt  run.ipynb  run.py  run.sh  run_300w.py  run_300w_resnet.py  run_300w_xception.py  run_kface.py  test.csv  test_.ipynb  testest.ipynb  visualization.ipynb
APP/: Dockerfile  README.md  requirements.txt
APP/backend/: __init__.py  back.py
APP/fronted/: __init__.py  front.py
APP/run/: demo_end.sh  demo_run.sh  docker_end.sh  docker_run.sh
SRC/: main.py  train_run.sh
SRC/configs/: __init__.py  default_config.py
SRC/dataset/: __init__.py  augmentation.py  dataloader.py  (+1 more)
olds/: rcnn.ipynb  run.ipynb
src/: all_config.py  all_config_axis.py  all_main_axis.py  config.py  config_2.py  frontal_config.py  frontal_main_27pt.py  lateral_config.py  lateral_main.py  main.py  main_2.py  main_multi.py  validate.py  validation.py
src_old/: all_main.py  frontal_config.py  frontal_config_27pt.py  frontal_main.py  lateral_config_27pt.py  lateral_main_27pt.py
(+132 files in other folders)
