[tool.poetry]
name = "komedi-fastapi"
version = "0.1.0"
description = "fastAPI Komedi"
authors = ["Minhan-Bae <yuyuqw92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
